--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,12 +7,9 @@
 body {
     width: 100%;
     height: 100%;
+    background-color: #EDEDED;
 }
-
-body > .hidden{
-    display: none;
-}
-
-
 
 @import url('./header.css');
+@import url('./loginPage.css');
+@import url('./registerPage.css');
