--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,4 @@
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +9,13 @@ body {
     width: 100%;
     height: 100%;
     background-color: #EDEDED;
+}
+
+#root{
+    display: flex;
+    align-items:center ;
+    justify-content: center;
+    flex-direction: column;
 }
 
 @import url('./header.css');
