--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,3 +10,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: #EDEDED; }
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
