--- a/src/styles/registerPage.css
+++ b/src/styles/registerPage.css
@@ -24,25 +24,28 @@
     gap: 20px; }
   .registerPage_formRegister input {
     width: 90%;
-    height: 40px;
+    max-width: 260px;
+    min-height: 20px;
+    max-height: 40px;
     border: #5F15AD solid 1px;
     background: #FFFFFF;
-    padding: 10px 20px;
-    border-radius: 10px;
-    text-align: start; }
+    padding: 5px 15px;
+    border-radius: 8px; }
   .registerPage_formRegister input::placeholder {
     color: #5F15AD;
     font-size: 11px; }
   .registerPage_formRegister button {
     width: 90%;
-    height: 40px;
+    max-width: 260px;
+    min-height: 20px;
+    max-height: 40px;
     border: #5F15AD solid 1px;
     background: #5F15AD;
-    border-radius: 10px;
-    padding: 0 40px;
+    border-radius: 8px;
+    padding: 5px 15px;
     color: #FFFFFF; }
   .registerPage_show {
-    font-size: 12px;
+    font-size: 11px;
     color: #1DAD4B;
     font-weight: 700;
     text-align: end;
@@ -55,7 +58,7 @@
   .registerPage_singInGoogle--logo {
     width: 10%; }
   .registerPage_singInGoogle--text {
-    font-size: 12px;
+    font-size: 11px;
     color: #1DAD4B; }
   .registerPage_singIn {
     display: flex;
@@ -63,7 +66,7 @@
     justify-content: center;
     flex-direction: row; }
   .registerPage_singIn--click {
-    font-size: 12px;
+    font-size: 11px;
     color: #1DAD4B; }
   .registerPage_singIn--text {
     font-size: 12px;
