--- a/src/sass/generics.scss
+++ b/src/sass/generics.scss
@@ -25,24 +25,27 @@ $tertiary-color: #1DAD4B;
 @mixin input {
     width: 90%;
     max-width: 260px;
-    min-height: 20px;
-    max-height: 40px;
+    // min-height: 20px;
+    // max-height: 40px;
     border: $primary-color solid 1px;
     background: #FFFFFF;
-    padding: 5px 15px;
-    border-radius: 8px;
+    padding: 10px 7px;
+    border-radius: 10px;
+    font-size: 14px;
 }
 
 @mixin button {
-    width: 90%;
-    max-width: 260px;
+    // width: 90%;
+    // max-width: 260px;
     min-height: 20px;
     max-height: 40px;
+    margin-top: 10px;
     border: $primary-color solid 1px;
     background: $primary-color;
-    border-radius: 8px;
-    padding: 5px 15px;
+    border-radius: 10px;
+    padding: 0 40px;
     color: #FFFFFF;
+    cursor: pointer;
 }
 @mixin textGreen {
     font-size: 11px;
