--- a/src/sass/loginPage.scss
+++ b/src/sass/loginPage.scss
@@ -13,6 +13,7 @@
         position: absolute;
         top: 10px;
         left: 20px;
+        cursor: pointer;
     }
 
     &_welcome{
@@ -39,15 +40,28 @@
     }
     
     &_formSingIn input {
-        @include input
+        @include input;
+        outline: none;
             /* max-height: 50px;*/
-    }
-    
-    &_formSingIn input::placeholder{
-        color: $primary-color;
-        font-size: 11px;
-        font-style: italic;
-        text-align: start;
+        &:focus {
+            background-color: #fbf7f0;
+            border: 1px solid $secundary-color;
+            color:$primary-color;
+        }
+
+        &:active {
+            box-shadow:  3px -3px 10px #fbcf8d,
+			//3px -3px 30px #F7990F,
+			//3px -3px 30px #F7990F, 
+			-3px 3px 10px #ee9f27;
+        }
+
+        &::placeholder{
+            color: $primary-color;
+            font-size: 11px;
+            font-style: italic;
+            text-align: start;
+        }
     }
     
     &_formSingIn button {
@@ -68,13 +82,28 @@
 
     &_singInGoogle--text{
         @include textGreen;
+        cursor: pointer;
     }
     &_singUp--register{
         @include textGreen;
+        cursor: pointer;
     }
     &_singUp--text{
         font-size: 11px;
         font-weight: 700;
+    }
+}
+
+.inputPassword{
+    width: 100%;
+    max-width: 294px;
+    @include flex-column-row;
+    position: relative;
+
+    &_eye{
+        width: 20px;
+        position: absolute;
+        right: 20px;
     }
 }
 
@@ -111,6 +140,13 @@
             min-height: 30px;
             max-width: 280px;
             font-size: 14px;
+        }
+    }
+
+    .inputPassword{
+        max-width: 315px;
+        &_eye{
+            right: 25px;
         }
     }
 }
@@ -159,6 +195,13 @@
         }
         &_singUp--text{
             font-size: 12px;
+        }
+    }
+
+    .inputPassword{
+        max-width: 340px;
+        &_eye{
+            right: 30px;
         }
     }
 }
