--- a/src/styles/registerPage.css
+++ b/src/styles/registerPage.css
@@ -36,28 +36,35 @@
   .registerPage_formRegister input {
     width: 90%;
     max-width: 260px;
-    min-height: 20px;
-    max-height: 40px;
     border: #5F15AD solid 1px;
     background: #FFFFFF;
-    padding: 5px 15px;
-    border-radius: 8px; }
-  .registerPage_formRegister input::placeholder {
-    color: #5F15AD;
-    font-size: 11px;
-    font-style: italic;
-    text-align: start; }
+    padding: 10px 7px;
+    border-radius: 10px;
+    font-size: 14px;
+    outline: none; }
+    .registerPage_formRegister input:focus {
+      background-color: #fbf7f0;
+      border: 1px solid #F7990F;
+      color: #5F15AD; }
+    .registerPage_formRegister input:active {
+      box-shadow: 3px -3px 10px #fbcf8d, -3px 3px 10px #ee9f27; }
+    .registerPage_formRegister input::placeholder {
+      color: #5F15AD;
+      font-size: 11px;
+      font-style: italic;
+      text-align: start; }
   .registerPage_formRegister button {
-    width: 90%;
-    max-width: 260px;
     min-height: 20px;
     max-height: 40px;
+    margin-top: 10px;
     border: #5F15AD solid 1px;
     background: #5F15AD;
-    border-radius: 8px;
-    padding: 5px 15px;
+    border-radius: 10px;
+    padding: 0 40px;
     color: #FFFFFF;
-    font-size: 11px; }
+    cursor: pointer;
+    font-size: 11px;
+    margin-top: 40px; }
   .registerPage_show {
     font-size: 11px;
     color: #1DAD4B;
@@ -76,7 +83,8 @@
     max-width: 35px; }
   .registerPage_singInGoogle--text {
     font-size: 11px;
-    color: #1DAD4B; }
+    color: #1DAD4B;
+    cursor: pointer; }
   .registerPage_singIn {
     display: flex;
     align-items: center;
@@ -84,10 +92,24 @@
     flex-direction: row; }
   .registerPage_singIn--click {
     font-size: 11px;
-    color: #1DAD4B; }
+    color: #1DAD4B;
+    cursor: pointer; }
   .registerPage_singIn--text {
     font-size: 11px;
     font-weight: 700; }
+
+.inputPassword {
+  width: 100%;
+  max-width: 294px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  position: relative; }
+  .inputPassword_eye {
+    width: 20px;
+    position: absolute;
+    right: 20px; }
 
 @media (min-width: 750px) {
   .registerPage_welcome--box {
@@ -108,7 +130,11 @@
   .registerPage_formRegister button {
     min-height: 30px;
     max-width: 280px;
-    font-size: 14px; } }
+    font-size: 14px; }
+  .inputPassword {
+    max-width: 315px; }
+    .inputPassword_eye {
+      right: 25px; } }
 
 @media (min-width: 1024px) {
   .registerPage_welcome--box {
@@ -136,4 +162,8 @@
   .registerPage_singIn--click {
     font-size: 12px; }
   .registerPage_singIn--text {
-    font-size: 12px; } }
+    font-size: 12px; }
+  .inputPassword {
+    max-width: 340px; }
+    .inputPassword_eye {
+      right: 30px; } }
