landing page styles

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -21,3 +21,4 @@ body {
 @import url('./header.css');
 @import url('./loginPage.css');
 @import url('./registerPage.css');
+@import url('./landingPage.css');
