--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 @import url("./header.css");
 @import url("./loginPage.css");
 @import url("./registerPage.css");
+@import url("./landingPage.css");
 * {
   box-sizing: border-box;
   padding: 0;
