--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -22,3 +22,4 @@ body {
 @import url('./loginPage.css');
 @import url('./registerPage.css');
 @import url('./landingPage.css');
+@import url('./wallPage.css');
