--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,7 @@
 @import url("./loginPage.css");
 @import url("./registerPage.css");
 @import url("./landingPage.css");
+@import url("./wallPage.css");
 * {
   box-sizing: border-box;
   padding: 0;
