--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -23,3 +23,4 @@ body {
 @import url('./registerPage.css');
 @import url('./landingPage.css');
 @import url('./wallPage.css');
+@import url('./sideMenu.css');
