--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,7 @@
 @import url("./registerPage.css");
 @import url("./landingPage.css");
 @import url("./wallPage.css");
+@import url("./sideMenu.css");
 * {
   box-sizing: border-box;
   padding: 0;
