--- a/src/sass/landingPage.scss
+++ b/src/sass/landingPage.scss
@@ -13,29 +13,37 @@
         background-color: #fff;
         
     }
-    &_header--icon{
-        justify-content: center;
-        align-items: center;
-        margin-left: 20px;
-        color: #5F15AD;
+
+    &_header--nav{
+        @include flex-column-center;
+        width: 90%;
+
+    }
+
+    // &_nav
+    // &_header--icon{
+    //     justify-content: center;
+    //     align-items: center;
+    //     margin-left: 20px;
+    //     color: #5F15AD;
     
-    }
+    // }
 
-    &_header--logo{
-        width: 20%;
-        height: 50px;
-        max-width: 80px;
-    }
+    // &_header--logo{
+    //     width: 20%;
+    //     height: 50px;
+    //     max-width: 80px;
+    // }
 
-    &_header--sing{
-        width: 25%;
-        font-size: 12px;
-        font-weight: 300;
-        background-color: #fff;
-        color: #5F15AD;
-        border: none;
-        font-family: sans-serif;
-    }
+    // &_header--sing{
+    //     width: 25%;
+    //     font-size: 12px;
+    //     font-weight: 300;
+    //     background-color: #fff;
+    //     color: #5F15AD;
+    //     border: none;
+    //     font-family: sans-serif;
+    // }
 
     &_main{
         width: 80%;
@@ -58,6 +66,12 @@
         @include flex-column-center;
     }
 }   
+
+.nav{
+    
+    &_logo
+    
+}
 
 .welcomeBox{
     &_container{
