--- a/src/sass/landingPage.scss
+++ b/src/sass/landingPage.scss
@@ -15,8 +15,9 @@
     }
 
     &_header--nav{
-        @include flex-column-center;
-        width: 90%;
+        width: 100%;
+        @include flex-column-row;
+        justify-content: space-between;
 
     }
 
@@ -68,9 +69,84 @@
 }   
 
 .nav{
+
+    &_menuLogo{
+        width: 50%;
+        height: 50px;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
     
-    &_logo
+    &menuLogo--img{
+        height: 50px;
+        max-width: 50px;
+    }
+
+    &menuLogo--abrirMenu {
+        width: 25%;
+        border: none;
+        background-color: #fff;
+        flex-direction: row-reverse;
+        cursor: pointer;
+        opacity: 1;
+        pointer-events: all;
     
+    }
+
+    &_sing{
+        width: 25%;
+        font-size: 12px;
+        font-weight: 300;
+        background-color: #fff;
+        color: #5F15AD;
+        border: none;
+        font-family: sans-serif;
+    }
+
+    
+    
+}
+
+.menu{
+    flex-direction: column;
+    position: fixed;
+    left: 0%;
+    top: 0%;
+    width: 100%;
+    align-items: center;
+    background-color: #000000;
+    height: 100%;
+    overflow-y: auto;
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+
+    &_li{
+        padding: 0;
+    }
+
+    &_a{
+        color: #5F15AD;
+        line-height: 60px;
+    }
+
+    &_cerrarMenu{
+        display: block;
+        border: none;
+        background: none;
+        cursor: pointer;
+        align-self: flex-start;
+        padding: 20px 15px;
+    }
+    
+}
+
+.menuAbierto{
+    opacity: 1;
+    pointer-events: all;
+
 }
 
 .welcomeBox{
